--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 
         <div class="speakers-section hidden" id="speakersSection">
             <div class="section-title">Deidentify Data</div>
-            <p>The following speakers were found in your VTT file. Change the participant's name to "participant"
-                followed by their ID number, e.g., "participant 5".</p>
+            <p>The following speakers were found in your VTT file. Change the participant's name to "Participant"
+                followed by their ID number, e.g., "Participant 5". Change the interviewers name to "Interviewer".</p>
             <div class="speakers-list" id="speakersList"></div>
         </div>
 
